--- a/patterns/jolla-hw-adaptation-suzu.yaml
+++ b/patterns/jolla-hw-adaptation-suzu.yaml
@@ -1,12 +1,12 @@
 # Feel free to disable non-critical HA parts during devel by commenting lines out
 # Generated in hadk by executing: rpm/dhd/helpers/add_new_device.sh
 
-Description: Pattern with packages for f512x HW Adaptation
-Name: jolla-hw-adaptation-f512x
+Description: Pattern with packages for suzu HW Adaptation
+Name: jolla-hw-adaptation-suzu
 Requires:
-- droid-hal-f5121
-- droid-hal-f5121-img-boot
-- droid-hal-f5121-img-recovery
+- droid-hal-suzu
+- droid-hal-suzu-img-boot
+- droid-hal-suzu-img-recovery
 
 # Hybris packages
 - libhybris-libEGL
@@ -60,5 +60,5 @@ Requires:
 # For devices where test_gps eventually gets a fix:
 - geoclue-provider-hybris
 
-Summary: Jolla HW Adaptation f512x
+Summary: Jolla HW Adaptation suzu
 
